# decision-browser

./: .env.sample  .gitignore  Dockerfile  README.md  Vagrantfile  app.py  config.php  import.php  index.php  init.php  models.py  pyproject.toml  requirements.txt  requirements_base.txt  run.sh  search.php  style.css  sync.py  test.py  test_grep.py  tex_to_db.py
.github/workflows/: build.yml
static/: style.css
templates/: grep.html  index.html
